# Projeto-Pesquisa

./: .gitignore  LICENSE  main.py  pipeline_oer.py  pyproject.toml  requirements.txt  run.py
src/: pipeline.py
src/oer_scraper/: __init__.py  config.py  logger.py  parser.py  parser_html.py  parser_ml_ready.py  pipeline_ml_ready.py  pipeline_oer.py  scraper.py  scraper_ml_ready.py  scraper_nature.py  scraper_nature_requests.py  utils.py
src/oer_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
